--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,24 +1,54 @@
 format = """
-[▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
 $directory\
-[](fg:#769ff0 bg:#394260)\
+$kubernetes\
+$helm\
+$opa\
+$docker_context\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#212736)\
-$nodejs\
 $rust\
+$nodejs\
+$bun\
+$deno\
 $golang\
-$all\
-[](fg:#212736 bg:#1d2230)\
+$java\
+$kotlin\
+$terraform\
+$package\
+$aws\
+$gcloud\
+$azure\
+$sudo\
+[](fg:bg_colour)\
+$fill\
+[](fg:bg_colour)\
+$status\
+$cmd_duration\
+$jobs\
 $time\
-[ ](fg:#1d2230)\
 \n$character"""
 
+palette = 'nord'
+
+[palettes.nord]
+bg_colour = '#3B4252'
+text_colour = '#D8DEE9'
+character_bg_colour = '#D8DEE9'
+character_text_colour = '#2E3440'
+character_text_error_colour = '#BF616A'
+
+[fill]
+symbol = ' '
+
+[character]
+success_symbol = "[❯](fg:character_bg_colour)"
+error_symbol = "[❯](fg:character_text_error_colour)"
+
+# Left modules
+
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
 format = "[ $path ]($style)"
+style = "bg:bg_colour"
 truncation_length = 3
 truncation_symbol = "…/"
 
@@ -29,37 +59,43 @@ truncation_symbol = "…/"
 "Pictures" = " "
 
 [git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+symbol = "󰊢"
+style = "bg:bg_colour"
+format = '[｜ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+style = "bg:bg_colour"
+format = '[($all_status$ahead_behind )]($style)'
 
 [nodejs]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = "󰎙"
+style = "bg:bg_colour"
+format = '[｜ $symbol ($version) ]($style)'
 
 [rust]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = "󱘗"
+style = "bg:bg_colour"
+format = '[｜ $symbol ($version) ]($style)'
 
 [golang]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = "󰟓"
+style = "bg:bg_colour"
+format = '[｜ $symbol ($version) ]($style)'
 
-[php]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+[package]
+style = "bg:bg_colour"
+format = '[｜ 󰏗 $version ]($style)'
+
+# Right modules
+
+[cmd_duration]
+min_time = 500
+style = "bg:bg_colour"
+format = '[ took  $duration ｜]($style)'
 
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+style = "bg:bg_colour"
+format = '[  $time ]($style)'
 
