--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -5,8 +5,9 @@ set $term alacritty
 # Launcher
 set $menu fuzzel
 
-output "Samsung Electric Company C49RG9x H1AK500000" pos 0 1440
-output "Samsung Electric Company LF27T850 H4LNC02215" pos 1280 0
+output "Samsung Electric Company C49RG9x H1AK500000" pos 0 0
+#output "Samsung Electric Company LF27T850 H4LNC02215" pos 1280 0
+output "Samsung Electric Company Odyssey G93SC HNTX800067" pos 0 1440 mode 5120x1440@240Hz
 
 # Key bindings
 bindsym $mod+Return exec $run $term
