fix: adopt desktop rules

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,6 +16,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1.566667
+monitor=DP-2,preferred,0x0,auto
+monitor=DP-1,preferred,0x-1440,auto
 
 
 ###################
@@ -41,7 +43,6 @@ $menu = fuzzel
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hyprpm reload -n
-
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -163,10 +164,10 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-#dwindle {
-#    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-#    preserve_split = true # You probably want this
-#}
+dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+}
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
@@ -200,7 +201,7 @@ input {
 
     touchpad {
         natural_scroll = true
-	tap_button_map = lmr
+        tap_button_map = lmr
     }
 }
 
@@ -214,6 +215,14 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+
+ecosystem {
+    no_donation_nag = true
+}
+
+experimental {
+    xx_color_management_v4 = true
 }
 
 
@@ -259,16 +268,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -311,3 +320,6 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = float,class:hyprland-share-picker
+
