--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,9 +16,10 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1.566667
-monitor=DP-2,preferred,0x0,auto
-monitor=DP-1,preferred,0x-1440,auto
+monitor=desc:Samsung Electric Company Odyssey G93SC HNTX800067,5120x1440@240,0x0,1,sdrbrightness,1.45,sdrsaturation,0.98
+monitor=desc:Samsung Electric Company C49RG9x H1AK500000,5120x1440@120,0x-1440,1,sdrbrightness,1.5,sdrsaturation,0.98
 
+workspace=name:@1,monitor:DP-2
 
 ###################
 ### MY PROGRAMS ###
@@ -95,6 +96,11 @@ general {
     allow_tearing = false
 
     layout = hy3
+}
+
+render {
+    direct_scanout = 2
+    cm_fs_passthrough = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -179,7 +185,8 @@ misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 
-    vrr = 2
+    vrr = 1
+
 }
 
 
@@ -216,17 +223,14 @@ ecosystem {
     no_donation_nag = true
 }
 
-experimental {
-    xx_color_management_v4 = true
-}
-
 
 ###################
 ### KEYBINDINGS ###
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER
+$shiftMod = SHIFT
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
@@ -300,6 +304,23 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Resize
+bind = $mainMod, R,submap,resize
+submap=resize
+bind = , right, resizeactive, 10 0
+bind = , left, resizeactive, -10 0
+bind = , up, resizeactive, 0 -10
+bind = , down, resizeactive, 0 10
+bind = , Return,submap,reset
+submap=reset
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - - | tee ~/Pictures/$(date +%s).png | wl-copy
+# Screenshot a monitor
+bind = , PRINT, exec, grim - | tee ~/Pictures/$(date +%s).png | wl-copy
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, slurp | grim -g - - | tee ~/Pictures/$(date +%s).png | wl-copy
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
